[package]
name = "platform_controller"
version = "0.1.0"
edition = "2024"

[dependencies]
avian2d = "0.3.0"
bevy = { version = "0.16.0", features = ["dynamic_linking"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
